Add git_install to master.yaml

--- a/deploy_k8s_cluster_by_ansible/master.yml
+++ b/deploy_k8s_cluster_by_ansible/master.yml
@@ -29,3 +29,6 @@
      args:
        chdir: $HOME
        creates: pod_network_setup.txt
+   
+   - name: install git
+     shell: yum install -y git
